idf_component_register(SRCS "main.c" 
                            "uSD/usdDrv.c" 
                            "uSD/usdApp.c" 
                            "wifi/wifiDrv.c"
                            "mqtt/mqtt.c"
                            "i2c/i2cdrv.c"
                            "i2c/i2c_app.c"
                            "bldc/bldc_servo.c"
                        INCLUDE_DIRS ".")