idf_component_register(SRCS "main.c" 
                            "uSD/usdDrv.c" 
                            "uSD/usdApp.c" 
                            "wifi/wifiDrv.c"
                            "mqtt/mqtt.c"
                            "i2c/i2c_drv/ads1015.c"
                            "i2c/i2c_drv/ds1338.c"
                            "i2c/i2c_drv/sdp810.c"
                            "i2c/i2c_app.c"
                            "bldc/bldc_servo.c"
                            "uart/uartapp.c"
                        INCLUDE_DIRS ".")